codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_browser_actions.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
assertion_line: 114
expression: "render_bottom_popup(&chat, 80)"
---
  Worktree
  /repo/worktree

› 1. Resume owner thread
  2. Copy working directory

  Press enter to confirm or esc to go back
